@@ -6,25 +6,27 @@ DIST deblob-check-4.0 670921 SHA256 042b511913187672d9a0512765e662ba5d4283812ebe
 DIST genpatches-4.0-6.base.tar.xz 118672 SHA256 228c38e1e691fc3b3862a5de627c71ba9bcf1aafd10317a9ece83a13e041ed24 SHA512 02c3cbe7982173121f03ca9424e5fa04b27f985c2f81b7469559eda4d8824e4bb348a0b9b341a9e34c7803ea341161ff306aee5d6cb73617e01fe7aad327e05f WHIRLPOOL 685c62001c6e29efbf800471ed95f8413368c6dc194689c04dea44c5b9148e09d3d79e026f91a2054a84a991bd741dc8de08838c3cd9b9c94fb8dc981db9e953
 DIST genpatches-4.0-6.experimental.tar.xz 61620 SHA256 ea7359c8a3e4e8c53ccfa0573158f080e4ed2a458f6de654097cf21134c0910d SHA512 69b0f51e43c2a5712fd8eff3f8292fe31109e33a24b51bb0e637d15bbf2329767896d6c56f3f178ad6e9d1f69ebe6875108941f18a4a10747405be385e47ce86 WHIRLPOOL 657758e5a8b7a9c764f1d8a875be71ee079907aa6ab79c90ae2632c4ab8445a86ad97cb3ef70e424a6bd62d4c937de577cf44a10aeea4a41d8dd6d1bcf803952
 DIST genpatches-4.0-6.extras.tar.xz 16280 SHA256 205c87c3d133a57d6ca42e2ce107cf64cbedd64fd356c601ca0af29248af5c1e SHA512 61cea7f5a8919418bbea96599f7decf804d97d9e6b8729e7e5dc4f077d54c86db7b0087f70b87183420798f16c1036242f1b857ff2598edf0902ff4fa6bd2890 WHIRLPOOL fde8c4c909a26d7bf2d00e35d1ee45e03c4710871f0a2cffdfbcd1109aac0b4f3215bf0ef5dc6562e9fb9d7447c1330f91a08ffa78912b3857cd3ddab5d10a3b
+DIST gentoo-b2-kernel-patches-4.0.4-r1.tar.gz 17929 SHA256 b82d77f971b0edad43c314d49a974d665e2668b8999d2303b7009e73e4dd5c56 SHA512 6ef968984df4933e25a0094a71b10b393512f90a2382dce7270021c2776a9c44f2646d06c2d7f48c04fa005bb88dd84af10c7c8662389b0a64cb4ce626602134 WHIRLPOOL cef5e9db70245b99a55be9a3b8c27850d11e47c602020ee259b5295279534dfc99e4d2d2c3bad3d6fbc33efe622d8d9fc22177723a902185a26d7a2b153394c3
 DIST gentoo-b2-kernel-patches-4.0.4.tar.gz 16364 SHA256 fd9d547721fbe68059f243d3cf10ba75ce642e67b1a59fe6ffa9abded7b28da4 SHA512 f73d3775e18ddcd1181260418ccf80f814f3a83d93987693fdbe48424997e6ea9fea5c179ec2d5d23168c89c16da1d63644c5bca03c08cdb284474b8661e64ee WHIRLPOOL 288e734c9a98eeac944fbeb325835804f36407a12d7765391a867bca284fe3d067cd99ea815868f82eac360f30750337d837d722165b0d045401fca58ae9280b
 DIST linux-4.0.tar.xz 82313052 SHA256 0f2f7d44979bc8f71c4fc5d3308c03499c26a824dd311fdf6eef4dee0d7d5991 SHA512 ce13d2c1c17908fd9a4aa42bb6348a0cb13dd22e560bd54c61b8bfdf62726d6095f130c59177a2fe4793b7dc399481bf10d3556d1d571616000f180304e5a995 WHIRLPOOL c481256e23dc82209942d4f2fc9a94aa7fc4c3c69b05eaa041a58ca4bdc5781274ec4c49d597ccf94b634d61418ec578d20a6569c6c7052b4d3cf33611c99001
+EBUILD gentoo-b2-sources-4.0.4-r1.ebuild 1083 SHA256 bb8a41fce81a8047d386214742d1dbac0d2b0a4f7364a5df63cbafb97f775628 SHA512 07443897866137e92c5fd09d0df1f7810a5b7f29bc6cbee2efe30570c91abdce453ec5e2ceee5d9b1c08f066b6f0dd86234c98cfb886c3b0530ca41db1012055 WHIRLPOOL ad76eb07bfb26399c025ef526ec0a80445ad9ec71c6c40d7dfbf4026c1e688d2d91b51b12a25b810b513de9d439d977ba9332aac0e234a53238aa8149eb4f9bb
 EBUILD gentoo-b2-sources-4.0.4.ebuild 1081 SHA256 c283495aee726449e37f4a9dbbeda53db224c47f3b5f8e584500074978c47458 SHA512 1b99bf2ab0e425596c3fe267a4a70a47ed20edacca37a2e454b0a6177615e21081ad21606cd5049f685adca53c58d10f9f770bc1ea264d62797300a7665a108e WHIRLPOOL ad44ae2e85351617ebdb4aed5ec5fb2a7a9d42b8ecb8e155bffaa7feeae62b29384080f362e8456517699b4d7a69af33a8942e718a961601a0aaaaf4afcfc9b0
-MISC ChangeLog 410 SHA256 797ef2efe990cc2283a91949ab08c41b01bc4c3e5b678b5d5eaef9485d8e4feb SHA512 57adadf15cdf5a1480254b97d5abcd996c4a1f64be87d8c21616a0ed8a55562d3d716469a338a8363c527c384d8be89d08549442f778b63564a57d632ef66c20 WHIRLPOOL e94bf95c16bd498c463229136289abab4395fb9252623750f5ffff4a8cf351f57c6f65d9d872cef8ebd6145e61542b264235dea621ffddd05a9ef9a43a5b9298
+MISC ChangeLog 584 SHA256 65d7294d9c32583cadfc1c0de9f97f57cf91f1d51a9a690a45b128545c7ecf1f SHA512 7072fe0688a89d4762c37d6f51d9ed63c5881b98df93f895ba1b9702426748cf1b68cdf623786ab867f42020913a9b89dfa3ca8a335721af5b0585f5905ab5a8 WHIRLPOOL 87d1d61592d50bcf4ade9f21d3cb7b1ecf067cc9f17024c70844de2c03fb6528f666451ed95dd3a728d35167b46a230f5de0c3280a1d8d8b5425da1d797af4f0
 MISC metadata.xml 791 SHA256 1f659a2b4a3e3d3b16715c76abc7c4a7f056c406e2787e2f9053fae150239859 SHA512 f5e77f85ee6ce465f001cf4756c9d7976122b4895c66c92103eb855d8bf2e918e66102c64317e68599f7c77b737bcf1f4f695d44deaa389ef0926408733725b7 WHIRLPOOL ddf30598116f6e116fc017ce323e25b58c5cfca96d5d58aebd482b6cda86a8993730123947f13b2ef289c538435f3daeb24df6404d302cdb5b0459291dab69a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVYEBxAAoJEDHIDbLd52zqUysP/Ax83bn92BoY0XyGzGTgROyu
-JKLZoQAFOp2n+YfJCj7IEdeDvWXFch3h852ApvZL7s5SmP1U1Us86IS9N1uxihnM
-HT7J3H5SM3f8BpASmdhhXlQaomJGS8FrShcpyYdTK9+7vJz7wTLPamoupceA1W7w
-jaEjrwGExKLOzwZ1NZqfKX+uO6KDvaGqK3XBmq95QZILIOLxEbJtcIt81FeAPOG2
-yOCIdgCaMDByWajhJwMSOxG+RQZo8gWuDurxXC7WUj1dI8+XPGdc28JBA190dOd3
-YoAvKprJiwdJJ3pT/OG1uIDsALXafrk4qDOv+zgCXXzw6vLCbgyin+VlO7BqBpmV
-aynWBzvm/hkmR9S+oy5A5D8poqjvI+A1mr1kLlS6PpiXCiBmV0KoUBfnAKIBkSmX
-bcUakOF4XHLMiNaaB2FQNe47oaQFSolA0xVdDQ4vGW5Bo/XeEETbqpt41Ya7zFV0
-TEYMs7CO8sOv5uHZdTHg/KysTVnqyGqpppL6ecvdZmIT2YBuBqauvD5MVFgO9nk/
-R5s5Xngm0ykYTUW7yz0wciuUyGhp3nfd04Bg5RSzFkj2oz5qgYJBCZq3MrgKz+uw
-0DneHaxavnZ7H7OPukZDbZK8sJShPpA/08brfbylgh2uHbx/T9/Hg4ICL/YER6mw
-qfSCOKwmQ5g7cUdb4hkz
-=9gpm
+iQIcBAEBCAAGBQJVqmRqAAoJEDHIDbLd52zqSN0QALSx6QFo34yKJHZ4fMArwPqw
+n+LWKHTdGB9tQmKqgLbAqMQHSmOud473Fsi6G8NbJynqQktlalhWe4ouTLpuhCpq
+risN9Ubz96DGF5CaZC54/MHu0ksaIq7le4jU1sL0o+/05YuWPvVelshEK7AgVgA8
+9tLebFn1jjRyroEJOi5kIWw2qWVzySLFPQVLJ5vvP/miJdXTXKs2/KBxgcz2X6Wd
+Ix5o4I46VquNskzZZRubhR4oe3mhohQlG3hbpoMZsRHRFpfJCy/Fri4pHbUr3zd0
+xxz60SB9UgLeuM+qdCy0y6IecKDP7w2Cj2A2L4t7p2CGCoZMpix+LZDgo55JlHpR
+ratnYKMzEJhgamLapVB9w6qLRrmyllzAkUncR/l3uAJyQFNRYa8d9iWn0DqUyVvm
+IsrhbtQYsc2aeuMfsRPA7AbDzLrWQyBhiOn4Vkpt52uapfD+Wj+HVPk12aG7njoI
+lvC56iZyAlzqPEs2CwlRk1RNdNbAzMD4TzJhhtXNDR1vfeF331APFjACyaUh3cov
+92eusMSvio5Nhvg3ZmqGSiu/Q129YgnpVKJcZND55k1vwMFYCuDour+xuDu/N/5T
++JtHExXNmyZeyVMgk+umOdmHAV9Xsss+lzc/5obzCuRXz7dow5mvmGc8BiKXrYY6
+KZQ/PaevUb202BGDwPmC
+=aURl
 -----END PGP SIGNATURE-----
