@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*gentoo-b2-sources-4.0.4-r1 (18 Jul 2015)
+
+  18 Jul 2015; sakaki <sakaki@deciban.com> +gentoo-b2-sources-4.0.4-r1.ebuild:
+  Add 4.0.4-r1 (with support for rev 1 B2 boards).
+
   22 May 2015; sakaki <sakaki@gentoo.org> -gentoo-b2-sources-3.18.2.ebuild:
   Drop old (3.18.4), update b2 patch hashes
 
